--- a/Client/Viewer/ViewerWindow.xaml
+++ b/Client/Viewer/ViewerWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Client.Viewer"
         mc:Ignorable="d"
-        Title="ViewerWindow" Height="900" Width="1600" ResizeMode="NoResize" WindowStyle="None">
-    <Grid x:Name="grid">
+        Title="ViewerWindow" Height="900" Width="1600" ResizeMode="NoResize" WindowStyle="None" MouseLeftButtonDown="Window_MouseLeftButtonDown">
+    <Grid x:Name="grid" Background="Cyan">
         
     </Grid>
 </Window>
