--- a/Server/HostServer/StartController.xaml
+++ b/Server/HostServer/StartController.xaml
@@ -1,29 +1,38 @@
-﻿<UserControl x:Class="Server.HostServer.StartController"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Server.HostServer"
+             xmlns:Components="clr-namespace:Server.HostServer.Components" x:Class="Server.HostServer.StartController"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="600" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition/>
+            <RowDefinition Height="100"/>
+            <RowDefinition Height="2*"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid>
-            <Button x:Name="btnStartTurn1" Content="Lượt 1" HorizontalAlignment="Left" Margin="18,10,0,0" VerticalAlignment="Top" Click="btnStartTurn1_Click"/>
-            <Button x:Name="btnStartTurn2" Content="Lượt 2" HorizontalAlignment="Left" Margin="73,10,0,0" VerticalAlignment="Top" Click="btnStartTurn2_Click"/>
-            <Button x:Name="btnStartTurn3" Content="Lượt 3" HorizontalAlignment="Left" Margin="128,10,0,0" VerticalAlignment="Top" Click="btnStartTurn3_Click"/>
-            <Button x:Name="btnStartTurn4" Content="Lượt 4" HorizontalAlignment="Left" Margin="183,10,0,0" VerticalAlignment="Top" Click="btnStartTurn4_Click"/>
-            <Label HorizontalAlignment="Left" Margin="18,44,0,0" VerticalAlignment="Top">Câu hỏi</Label>
-            <Label HorizontalAlignment="Left" Margin="18,74,0,0" VerticalAlignment="Top">Trả lời</Label>
-            <Label x:Name="lblStartQuestion" HorizontalAlignment="Left" Margin="90,44,0,0" VerticalAlignment="Top">0</Label>
-            <Label x:Name="lblStartAnswer" HorizontalAlignment="Left" Margin="90,74,0,0" VerticalAlignment="Top">1</Label>
-            <Button x:Name="btnCorrect" Content="Đúng" HorizontalAlignment="Left" Margin="16,120,0,0" VerticalAlignment="Top" Width="50" Background="Lime" Click="btnCorrect_Click"/>
-            <Button x:Name="btnWrong" Content="Sai" HorizontalAlignment="Left" Margin="73,120,0,0" VerticalAlignment="Top" Width="50" Background="Red" Click="btnWrong_Click"/>
-            <Label x:Name="lblTime" Content="0" HorizontalAlignment="Left" Height="60" Margin="722,10,0,0" VerticalAlignment="Top" Width="68"/>
+            <Button x:Name="btnChangeScene" Content="KHỞI ĐỘNG!" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Background="#FF1A1DBD" Foreground="White" FontWeight="Bold" Click="btnChangeScene_Click"/>
+            <Button x:Name="btnIntro" Content="Chạy intro" HorizontalAlignment="Left" Margin="104,10,0,0" VerticalAlignment="Top" Click="btnIntro_Click"/>
+            <Button x:Name="btnStartTurn1" Content="Lượt 1" HorizontalAlignment="Left" Margin="11,38,0,0" VerticalAlignment="Top" Click="btnStartTurn1_Click"/>
+            <Button x:Name="btnStartTurn2" Content="Lượt 2" HorizontalAlignment="Left" Margin="66,38,0,0" VerticalAlignment="Top" Click="btnStartTurn2_Click"/>
+            <Button x:Name="btnStartTurn3" Content="Lượt 3" HorizontalAlignment="Left" Margin="121,38,0,0" VerticalAlignment="Top" Click="btnStartTurn3_Click"/>
+            <Button x:Name="btnStartTurn4" Content="Lượt 4" HorizontalAlignment="Left" Margin="176,38,0,0" VerticalAlignment="Top" Click="btnStartTurn4_Click"/>
+            <Button x:Name="btnStartTIME" Content="BẮT ĐẦU" HorizontalAlignment="Left" Margin="81,72,0,0" VerticalAlignment="Top" Click="btnStartTIME_Click"/>
+            <Label x:Name="lblTurn" Content="Lượt " HorizontalAlignment="Left" Margin="11,69,0,0" VerticalAlignment="Top"/>
+
         </Grid>
-        <Grid x:Name="gridPoint" Grid.Row="1"/>
+
+        <Grid Grid.Row="1">
+            <Components:QuestionShowing x:Name="questionBox" Margin="0,0,0,70" />
+            <Button x:Name="btnBlank" Content="Âm thanh chỗ trống" HorizontalAlignment="Left" Margin="10,0,0,55" VerticalAlignment="Bottom" Click="btnBlank_Click"/>
+            <Button x:Name="btnCorrect" Content="Đúng" HorizontalAlignment="Left" Margin="10,0,0,7" VerticalAlignment="Bottom" Width="50" Background="Lime" Click="btnCorrect_Click"/>
+            <Button x:Name="btnWrong" Content="Sai" HorizontalAlignment="Left" Margin="71,0,0,7" VerticalAlignment="Bottom" Width="50" Background="Red" Click="btnWrong_Click"/>
+            <Label x:Name="lblTime" Content="0" HorizontalAlignment="Left" Height="30" Margin="142,0,0,26" VerticalAlignment="Bottom" Width="48"/>
+            <Button x:Name="btnEmergency" Content="KHẨN CẤP!!" HorizontalAlignment="Left" Height="49" Margin="220,0,0,17" VerticalAlignment="Bottom" Width="88" Background="Red" Foreground="White" FontWeight="Bold"/>
+        </Grid>
+        <Grid x:Name="gridPoint" Grid.Row="2"/>
     </Grid>
 </UserControl>
