--- a/Server/HostServer/ServerWindow.xaml
+++ b/Server/HostServer/ServerWindow.xaml
@@ -18,7 +18,10 @@
                         <RowDefinition/>
                         <RowDefinition/>
                     </Grid.RowDefinitions>
+                    <Button x:Name="btnIntro" Content="Intro" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Click="btnIntro_Click"/>
+                    <Button x:Name="btnOpening" Content="Nhạc bắt đầu" HorizontalAlignment="Left" Margin="61,10,0,0" VerticalAlignment="Top" Click="btnOpening_Click"/>
                     <Grid x:Name="gridGeneral" Grid.Row="1"/>
+                    <Button x:Name="btnPlayerIntro" Content="Giới thiệu thí sinh" HorizontalAlignment="Left" Margin="10,34,0,0" VerticalAlignment="Top" Click="btnPlayerIntro_Click"/>
                 </Grid>
             </TabItem>
             <TabItem x:Name="tabStart" Header="Khởi động">
